# gemini-web2api

./: .dockerignore  .gitignore  API_FORMATS_EXAMPLES.txt  CLAUDE_PROXY_README.md  Dockerfile  README.md  README_CN.md  config.example.json  demo.py  docker-compose.local.yml  gemini_web2api.py  pyproject.toml  quick_test.py  requirements.txt  start_with_proxy.ps1  start_with_proxy.sh  test_anthropic_converter.py  test_claude_native.py  test_claude_proxy.py  test_example.py  使用说明.md
.claude/: settings.local.json
.github/workflows/: docker.yml
gemini_web2api/: __init__.py  __main__.py  anthropic_converter.py  claude_proxy.py  config.py  gemini.py  models.py  multimodal.py  server.py  tools.py
